<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_shape"
    tools:context="csusm.parkingspot.MainActivity">

    <ImageView
        app:srcCompat="@drawable/calstate_logo"
        android:id="@+id/mainLogoView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_width="250dp"
        android:layout_alignParentTop="true"
        android:layout_height="100dp"
        android:layout_marginBottom="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/copyrightView"
        android:text="@string/authors"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/profileBtn" />

    <Button
        android:id="@+id/checkinDirectBtn"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/findBtn"
        android:layout_below="@+id/findBtn"
        android:layout_marginTop="21dp"
        android:background="@drawable/button"
        android:text="@string/check_in"
        android:textSize="24sp" />

    <Button
        android:id="@+id/mapBtn"
        android:background="@drawable/button"
        android:layout_marginTop="19dp"
        android:layout_height="60dp"
        android:layout_width="300dp"
        android:layout_below="@+id/checkinDirectBtn"
        android:layout_alignStart="@+id/checkinDirectBtn"
        android:text="@string/parking_map"
        android:textSize="24sp"
        />

    <Button
        android:id="@+id/profileBtn"
        android:background="@drawable/button"
        android:layout_height="60dp"
        android:layout_width="300dp"
        android:layout_alignStart="@+id/mapBtn"
        android:text="@string/my_profile"
        android:textSize="24sp"
        android:layout_below="@+id/mapBtn"
        android:layout_marginTop="60dp" />

    <Button
        android:id="@+id/findBtn"
        android:background="@drawable/button"
        android:layout_height="60dp"
        android:layout_width="300dp"
        android:layout_centerInParent="false"
        android:layout_below="@+id/mainLogoView"
        android:layout_centerHorizontal="true"
        android:text="@string/find_a_spot"
        android:textSize="24sp" />

</RelativeLayout>
